--- a/www/index.html
+++ b/www/index.html
@@ -13,19 +13,16 @@
 
 
     <!-- ionic/angularjs js -->
-
+    <script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/modalViewCtrl.js"></script>
-    <script src="js/timerCtrl.js"></script>
-    <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
     <!--
@@ -40,6 +37,14 @@
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
+    <!-- your app's js -->
     <ion-nav-view></ion-nav-view>
+
+
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/modalViewCtrl.js"></script>
+    <script src="js/timerCtrl.js"></script>
+    <script src="js/services.js"></script>
   </body>
 </html>
