created divs for timer; wip

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <!-- ionic/angularjs js -->
     <script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="/lib/angular-timer/app/js/_timer.js"></script>
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 
